--- a/index.html
+++ b/index.html
@@ -3,103 +3,166 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Centro Universitário Estácio de São Paulo — Sistema de Verificação de Diplomas</title>
+  <title>Anhanguera — Portal de Autenticidade Acadêmica</title>
   <style>
-    :root{--bg:#f6f7f9;--card:#ffffff;--accent:#1e8b3a;--muted:#6b7280}
-    body{font-family:Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial; background:var(--bg); margin:0; color:#0f172a}
-    header{background:linear-gradient(90deg,#0f172a08,#0f172a00);padding:24px 28px;border-bottom:1px solid #e6e9ee;display:flex;align-items:center;justify-content:space-between}
-    .brand{font-weight:700;font-size:18px}
-    .container{max-width:980px;margin:36px auto;padding:20px}
-    .search{background:var(--card);border-radius:12px;padding:20px;box-shadow:0 6px 18px rgba(15,23,42,0.06);display:flex;gap:16px;align-items:center}
-    .search input{flex:1;padding:14px 16px;border:1px solid #e6e9ee;border-radius:8px;font-size:15px}
-    .search button{background:var(--accent);color:white;border:none;padding:12px 16px;border-radius:8px;font-weight:600;cursor:pointer}
-    .content{display:flex;gap:20px;margin-top:20px}
-    .left{flex:1}
-    .right{width:460px}
-    .card{background:var(--card);border-radius:12px;padding:22px;box-shadow:0 6px 18px rgba(15,23,42,0.06)}
-    .muted{color:var(--muted);font-size:14px}
-    .img-wrap{background:#fcfffb;padding:18px;border-radius:10px;border:1px solid #ecf6ea}
-    .meta{margin-top:12px;font-size:15px}
-    .label{display:inline-block;padding:6px 10px;border-radius:8px;background:#e6f6e9;color:#0f612b;font-weight:700}
-    footer{max-width:980px;margin:28px auto;color:var(--muted);font-size:13px;text-align:center}
-    @media (max-width:820px){.content{flex-direction:column}.right{width:100%}}
-    /* canvas responsivo */
-    #previewCanvas{max-width:100%;border-radius:8px;box-shadow:0 8px 30px rgba(12,20,40,0.06);background:white}
+    :root {
+      --laranja-escuro: #e65c00;
+      --laranja-claro: #ffb84d;
+      --bg: #fff8f2;
+      --texto: #1f2937;
+      --muted: #6b7280;
+      --card: #ffffff;
+    }
+
+    body {
+      margin: 0;
+      font-family: "Inter", system-ui, -apple-system, "Segoe UI", Roboto;
+      background: var(--bg);
+      color: var(--texto);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-start;
+      min-height: 100vh;
+    }
+
+    header {
+      width: 100%;
+      background: linear-gradient(90deg, var(--laranja-escuro), var(--laranja-claro));
+      color: white;
+      text-align: center;
+      padding: 32px 16px;
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 24px;
+      font-weight: 700;
+    }
+
+    header p {
+      margin: 6px 0 0;
+      font-size: 15px;
+      opacity: 0.9;
+    }
+
+    main {
+      width: 100%;
+      max-width: 600px;
+      background: var(--card);
+      margin-top: 40px;
+      border-radius: 16px;
+      padding: 28px;
+      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.06);
+    }
+
+    .search {
+      display: flex;
+      gap: 10px;
+      margin-bottom: 20px;
+    }
+
+    input {
+      flex: 1;
+      padding: 12px 14px;
+      border-radius: 8px;
+      border: 1px solid #e5e7eb;
+      font-size: 15px;
+    }
+
+    button {
+      background: var(--laranja-escuro);
+      color: white;
+      border: none;
+      padding: 12px 16px;
+      border-radius: 8px;
+      font-weight: 600;
+      cursor: pointer;
+      transition: background 0.2s;
+    }
+
+    button:hover {
+      background: #cc5200;
+    }
+
+    .card {
+      border: 1px solid #f3f4f6;
+      border-radius: 12px;
+      padding: 20px;
+      background: #fffaf5;
+    }
+
+    .label {
+      display: inline-block;
+      padding: 6px 10px;
+      border-radius: 8px;
+      background: #fff2e0;
+      color: var(--laranja-escuro);
+      font-weight: 700;
+      font-size: 14px;
+    }
+
+    .muted {
+      color: var(--muted);
+      font-size: 14px;
+      margin-bottom: 4px;
+    }
+
+    footer {
+      margin-top: 40px;
+      color: var(--muted);
+      font-size: 13px;
+      text-align: center;
+      padding-bottom: 20px;
+    }
+
+    @media (max-width: 600px) {
+      main {
+        margin: 20px;
+        padding: 20px;
+      }
+    }
   </style>
 </head>
 <body>
   <header>
-    <div class="brand">Centro Universitário Estácio de São Paulo — Sistema de Verificação de Diplomas</div>
-    <div class="muted">Portal de autenticidade</div>
+    <h1>Anhanguera</h1>
+    <p>Portal de Autenticidade Acadêmica</p>
   </header>
 
-  <div class="container">
-    <div class="search" role="search" aria-label="Pesquisar diploma">
-      <input id="q" placeholder="Consultar por número do diploma (ex: 576578-58)" aria-label="Número do diploma" />
+  <main>
+    <div class="search">
+      <input id="q" placeholder="Digite o número do diploma (ex: 18879-25)" aria-label="Número do diploma" />
       <button id="btn">Consultar</button>
     </div>
 
-    <div class="content">
-      <div class="left">
-        <div class="card" id="result">
-          <div class="muted">Resultado da verificação</div>
-          <h2 id="name">—</h2>
-          <div class="meta" id="degree">—</div>
-          <div class="meta" id="inst">—</div>
-          <div class="meta" id="date">—</div>
-          <div style="margin-top:14px;">
-            <span class="label" id="status">—</span>
-          </div>
-          <hr style="margin:18px 0;border:none;border-top:1px solid #eef2f6" />
-          <div class="muted">Número do diploma</div>
-          <div id="dnum" style="font-weight:700;margin-top:6px">—</div>
-        </div>
+    <div class="card" id="result">
+      <div class="muted">Resultado da verificação</div>
+      <h2 id="name">—</h2>
+      <div class="meta" id="degree">—</div>
+      <div class="meta" id="inst">—</div>
+      <div class="meta" id="date">—</div>
+      <div style="margin-top:14px;">
+        <span class="label" id="status">—</span>
       </div>
-
-      <div class="right">
-        <div class="card">
-          <div class="muted">Visualização</div>
-          <div class="img-wrap" style="margin-top:12px;display:flex;justify-content:center">
-            <!-- Canvas que vai desenhar o diploma dinamicamente -->
-            <canvas id="previewCanvas" width="420" height="260" role="img" aria-label="Pré-visualização do diploma"></canvas>
-          </div>
-          <!-- removi o parágrafo de 'simulação' conforme solicitado -->
-        </div>
-      </div>
+      <hr style="margin:18px 0;border:none;border-top:1px solid #f3f4f6" />
+      <div class="muted">Número do diploma</div>
+      <div id="dnum" style="font-weight:700;margin-top:6px">—</div>
     </div>
-
-  </div>
+  </main>
 
   <footer>
-    <!-- Removi a menção a 'sistema simulado' aqui -->
-    Centro Universitário Estácio de São Paulo — © 2025
+    © 2025 Anhanguera — Todos os direitos reservados
   </footer>
 
   <script>
-    /***********************
-     * DADOS (adicione mais entradas conforme necessário)
-     * Cada chave é o número do diploma (exatamente como vai ser pesquisado).
-     ***********************/
-    const records = {
-      '576578-58': {
-        diploma: '576578-58',
-        name: 'Jader Maciel Campineiro',
-        degree: 'Bacharel em Psicologia',
-        inst: 'Centro Universitário Estácio de São Paulo',
-        date: 'Conclusão em 10/08/2024',
-        status: 'Ativo'
-      },
-      '75676-74': { 
-  diploma: '75676-74', 
-  name: 'Adriana Alencar dos Santos', 
-  degree: 'Bacharel em Engenharia Civil', 
-  inst: 'Pontifícia Universidade Católica de São Paulo', 
-  date: 'Conclusão em 10/05/2023', 
-  status: 'Ativo' 
-}
-};
-      // Exemplo de outro registro:
-      // '123456-00': { diploma: '123456-00', name: 'Maria Silva', degree: 'Bacharel em X', inst: 'Universidade Y', date: 'Conclusão em 01/01/2020', status: 'Ativo' }
+    const known = {
+      diploma: '18879-25',
+      name: 'Edson da Silva Menezes',
+      degree: 'Graduação em Psicologia',
+      inst: 'Anhanguera',
+      date: 'Conclusão em 12/12/2022',
+      status: 'Ativo'
     }
 
     const q = document.getElementById('q')
@@ -110,120 +173,39 @@
     const dateEl = document.getElementById('date')
     const dnumEl = document.getElementById('dnum')
     const statusEl = document.getElementById('status')
-    const canvas = document.getElementById('previewCanvas')
-    const ctx = canvas.getContext('2d')
 
-    // Função para desenhar a pré-visualização (base + texto)
-    function drawPreview(record){
-      // Limpa
-      ctx.clearRect(0,0,canvas.width,canvas.height)
-
-      // Desenhar um "molde" simples de diploma (você pode trocar por imagem base)
-      // fundo
-      ctx.fillStyle = '#f8fafc'
-      ctx.fillRect(0,0,canvas.width,canvas.height)
-
-      // borda
-      ctx.strokeStyle = '#e6e9ee'
-      ctx.lineWidth = 2
-      ctx.strokeRect(8,8,canvas.width-16,canvas.height-16)
-
-      // Título
-      ctx.fillStyle = '#0f172a'
-      ctx.font = '600 18px Inter, sans-serif'
-      ctx.fillText('Resultado da verificação', 20, 40)
-
-      // Nome (em destaque)
-      ctx.font = '700 20px Inter, sans-serif'
-      ctx.fillText(record.name || '—', 20, 80)
-
-      // Grau / Instituição / Data
-      ctx.font = '500 13px Inter, sans-serif'
-      ctx.fillStyle = '#374151'
-      ctx.fillText(record.degree || '', 20, 110)
-      ctx.fillText(record.inst || '', 20, 132)
-      ctx.fillText(record.date || '', 20, 154)
-
-      // Status badge (verde ou cinza)
-      const badgeX = canvas.width - 140
-      const badgeY = 30
-      ctx.beginPath()
-      if(record.status && record.status.toLowerCase() === 'ativo'){
-        ctx.fillStyle = '#e6f6e9'
-        ctx.fillRect(badgeX, badgeY, 100, 28)
-        ctx.fillStyle = '#0f612b'
-      } else {
-        ctx.fillStyle = '#fff0f0'
-        ctx.fillRect(badgeX, badgeY, 100, 28)
-        ctx.fillStyle = '#9b1c1c'
-      }
-      ctx.font = '700 13px Inter, sans-serif'
-      ctx.fillText(record.status || 'Não encontrado', badgeX + 12, badgeY + 18)
-
-      // Número do diploma no rodapé do cartão
-      ctx.fillStyle = '#0f172a'
-      ctx.font = '700 12px Inter, sans-serif'
-      ctx.fillText('Nº ' + (record.diploma || '—'), 20, canvas.height - 20)
-    }
-
-    function showNotFound(value){
+    function showNotFound(value) {
       nameEl.textContent = 'Nenhum registro encontrado para: ' + (value || '')
       degreeEl.textContent = ''
       instEl.textContent = ''
       dateEl.textContent = ''
       dnumEl.textContent = '—'
       statusEl.textContent = 'Não encontrado'
-      statusEl.style.background = '#fff0f0'
-      statusEl.style.color = '#9b1c1c'
-
-      // desenha preview genérica "não encontrado"
-      drawPreview({
-        name: '—',
-        degree: '',
-        inst: '',
-        date: '',
-        diploma: value || '—',
-        status: 'Não encontrado'
-      })
+      statusEl.style.background = '#ffe5e5'
+      statusEl.style.color = '#b91c1c'
     }
 
-    function showRecord(record){
-      nameEl.textContent = record.name
-      degreeEl.textContent = record.degree
-      instEl.textContent = record.inst
-      dateEl.textContent = record.date
-      dnumEl.textContent = record.diploma
-      statusEl.textContent = record.status
-      statusEl.style.background = '#e6f6e9'
-      statusEl.style.color = '#0f612b'
-
-      // desenha preview com os dados reais
-      drawPreview(record)
+    function showKnown() {
+      nameEl.textContent = known.name
+      degreeEl.textContent = known.degree
+      instEl.textContent = known.inst
+      dateEl.textContent = known.date
+      dnumEl.textContent = known.diploma
+      statusEl.textContent = known.status
+      statusEl.style.background = '#fff2e0'
+      statusEl.style.color = '#cc5200'
     }
 
-    btn.addEventListener('click', ()=>{
+    btn.addEventListener('click', () => {
       const v = (q.value || '').trim()
-      if(!v){
+      if (!v) {
         alert('Informe o número do diploma para consulta.')
         return
       }
-      // busca direta por chave (exata). Se quiser aceitar variações, normalizar aqui.
-      const rec = records[v]
-      if(rec) showRecord(rec)
-      else showNotFound(v)
+      if (v === known.diploma) showKnown(); else showNotFound(v)
     })
 
-    // Se desejar, preencher com um registro conhecido ao abrir (opcional).
-    // Vamos iniciar com tela limpa (sem dados) — o usuário precisa pesquisar.
-    drawPreview({ name: 'Digite o nº do diploma', diploma: '—', status: '' })
-
-    /***********************
-     * Como adicionar novos registros:
-     * - Localize o objeto `records` no topo do script.
-     * - Adicione uma nova chave com o número do diploma e o objeto com os campos.
-     * Exemplo:
-     * '999999-01': { diploma: '999999-01', name: 'Fulano de Tal', degree: 'Bacharel em Exemplo', inst: 'Universidade Z', date: 'Conclusão em 01/01/2022', status: 'Ativo' }
-     ***********************/
+    showKnown()
   </script>
 </body>
-    </html>
+</html>
