Update user information in index.html

--- a/index.html
+++ b/index.html
@@ -157,11 +157,11 @@
 
   <script>
     const known = {
-      diploma: '18879-25',
-      name: 'Edson da Silva Menezes',
-      degree: 'Graduação em Psicologia',
+      diploma: '28555-65',
+      name: 'Ana Caroline De Camargo',
+      degree: 'Licenciatura em Pedagogia',
       inst: 'Anhanguera',
-      date: 'Conclusão em 12/12/2022',
+      date: 'Conclusão em 26/03/2025',
       status: 'Ativo'
     }
 
