Add new education entry for Valéria Silva

--- a/index.html
+++ b/index.html
@@ -178,6 +178,13 @@
         inst: 'Anhanguera',
         date: 'Conclusão em 15/07/2024',
         status: 'Ativo'
+      },
+      '36656-64': {
+        name: 'Valéria Silva de Barros Ribeiro',
+        degree: 'Bacharel em Psicologia',
+        inst: 'Anhanguera',
+        date: 'Conclusão em 15/08/2024',
+        status: 'Ativo'
       }
     };
 
