--- a/index.html
+++ b/index.html
@@ -202,6 +202,14 @@
         date: 'Conclusão em 15/08/2024',
         status: 'Ativo',
         diploma: '36656-64'
+      },
+      '46656-64': {
+        name: 'Alessandro Soares Ribeiro',
+        degree: 'Pós-Graduação em Urgência e Emergência',
+        inst: 'Centro Universitário Anhanguera de São Paulo',
+        date: 'Conclusão em 10/12/2022',
+        status: 'Ativo',
+        diploma: '46656-64'
       }
     };
 
@@ -250,7 +258,7 @@
     }
 
     function validateDiplomaNumber(value) {
-      const regex = /^\d{5,6}-\d{2}$/; // Corrigido para 5 ou 6 dígitos antes do hífen
+      const regex = /^\d{5,6}-\d{2}$/;
       return regex.test(value);
     }
 
@@ -286,5 +294,4 @@
     });
   </script>
 </body>
-  </html>
-  
+</html>
