Update diploma entries in index.html

--- a/index.html
+++ b/index.html
@@ -179,37 +179,13 @@
 
   <script>
     const knownDiplomas = {
-      '28555-65': {
-        name: 'Ana Caroline De Camargo',
-        degree: 'Licenciatura em Pedagogia',
-        inst: 'Anhanguera',
-        date: 'Conclusão em 26/03/2025',
-        status: 'Ativo',
-        diploma: '28555-65'
-      },
-      '12345-67': {
-        name: 'João Silva',
-        degree: 'Bacharel em Administração',
-        inst: 'Anhanguera',
-        date: 'Conclusão em 15/07/2024',
-        status: 'Ativo',
-        diploma: '12345-67'
-      },
-      '36656-64': {
-        name: 'Valéria Silva de Barros Ribeiro',
-        degree: 'Bacharel em Psicologia',
-        inst: 'Anhanguera',
-        date: 'Conclusão em 15/08/2024',
-        status: 'Ativo',
-        diploma: '36656-64'
-      },
-      '46656-64': {
+      '465446-64': {
         name: 'Alessandro Soares Ribeiro',
-        degree: 'Pós-Graduação em Urgência e Emergência',
+        degree: 'Pós-Graduação em Cardiologia',
         inst: 'Centro Universitário Anhanguera de São Paulo',
-        date: 'Conclusão em 10/12/2022',
+        date: 'Conclusão em 16/06/2020',
         status: 'Ativo',
-        diploma: '46656-64'
+        diploma: '465446-64'
       }
     };
 
