Update diploma information for knownDiplomas

--- a/index.html
+++ b/index.html
@@ -179,13 +179,13 @@
 
   <script>
     const knownDiplomas = {
-      '465446-64': {
-        name: 'Alessandro Soares Ribeiro',
-        degree: 'Pós-Graduação em Cardiologia',
-        inst: 'Centro Universitário Anhanguera de São Paulo',
-        date: 'Conclusão em 16/06/2020',
+      '476457-64': {
+        name: 'Diego Roberto Alves',
+        degree: 'Pós-Graduação em Psicopedagogia',
+        inst: 'Centro Universitário Anhanguera de Belém do Pará',
+        date: 'Conclusão em 13/06/2024',
         status: 'Ativo',
-        diploma: '465446-64'
+        diploma: '476457-64'
       }
     };
 
