--- a/index.html
+++ b/index.html
@@ -194,6 +194,14 @@
         date: 'Conclusão em 10/08/2025',
         status: 'Ativo',
         diploma: '7466753-65'
+      },
+      '746778-75': {
+        name: 'André Cordeiro Moravec',
+        degree: 'Bacharel em Administração',
+        inst: 'Centro Universitário Estácio de São Paulo',
+        date: 'Conclusão em 18/08/2025',
+        status: 'Ativo',
+        diploma: '746778-75'
       }
     };
 
