--- a/index.html
+++ b/index.html
@@ -202,6 +202,16 @@
         date: 'Conclusão em 18/08/2025',
         status: 'Ativo',
         diploma: '746778-75'
+      },
+
+      /* NOVO DIPLOMA ADICIONADO */
+      '57557-86': {
+        name: 'Vanderlucia Lacerda dos Santos',
+        degree: 'Pós-Graduação em Enfermagem Estética',
+        inst: 'Anhanguera Educacional Ltda',
+        date: 'Conclusão em 10/08/2024',
+        status: 'Ativo',
+        diploma: '57557-86'
       }
     };
 
