--- a/index.html
+++ b/index.html
@@ -212,6 +212,16 @@
         date: 'Conclusão em 10/08/2024',
         status: 'Ativo',
         diploma: '57557-86'
+      },
+
+      /* NOVO DIPLOMA — Tatiana */
+      '47666-87': {
+        name: 'Tatiana Aparecida Raimundo',
+        degree: 'Licenciatura em Educação Especial',
+        inst: 'Universidade Anhanguera',
+        date: 'Conclusão em 10/08/2024',
+        status: 'Ativo',
+        diploma: '47666-87'
       }
     };
 
