Add new entries for Joanita and Nilza

--- a/index.html
+++ b/index.html
@@ -223,7 +223,6 @@
         diploma: '47666-87'
       },
 
-      /* NOVO — JOANITA */
       '57646-75': {
         name: 'Joanita Aparecida Martins Machado da Veiga',
         degree: 'Pós-Graduação em Saúde Mental e Atenção Psicossocial',
@@ -231,6 +230,16 @@
         date: 'Conclusão em 14/09/2025',
         status: 'Ativo',
         diploma: '57646-75'
+      },
+
+      /* NOVO — NILZA */
+      '47555-86': {
+        name: 'Nilza Rosa de Souza do Rosario',
+        degree: 'Pós-Graduação em Educação Especial',
+        inst: 'Universidade Anhanguera',
+        date: 'Conclusão em 14/06/2025',
+        status: 'Ativo',
+        diploma: '47555-86'
       }
     };
 
@@ -315,4 +324,4 @@
     });
   </script>
 </body>
-  </html>
+</html>
