--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Anhanguera — Portal de Autenticidade Acadêmica</title>
+
   <style>
     :root {
       --laranja-escuro: #e65c00;
@@ -22,14 +23,13 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: flex-start;
       min-height: 100vh;
     }
 
     header {
       width: 100%;
       background: linear-gradient(90deg, var(--laranja-escuro), var(--laranja-claro));
-      color: white;
+      color: #fff;
       text-align: center;
       padding: 32px 16px;
     }
@@ -78,17 +78,11 @@
       border-radius: 8px;
       font-weight: 600;
       cursor: pointer;
-      transition: background 0.2s;
     }
 
     button:disabled {
-      background: #cc5200;
-      cursor: not-allowed;
       opacity: 0.6;
-    }
-
-    button:hover:enabled {
-      background: #cc5200;
+      cursor: not-allowed;
     }
 
     .card {
@@ -128,200 +122,143 @@
       text-align: center;
       padding-bottom: 20px;
     }
-
-    @media (max-width: 600px) {
-      main {
-        margin: 20px;
-        padding: 20px;
-      }
-    }
-
-    .loading {
-      cursor: wait;
-    }
-
-    .loading::after {
-      content: ' (Carregando...)';
-    }
   </style>
 </head>
+
 <body>
-  <header>
-    <h1>Anhanguera</h1>
-    <p>Portal de Autenticidade Acadêmica</p>
-  </header>
 
-  <main>
-    <div class="search">
-      <input id="q" placeholder="Digite o número do diploma (ex: 18879-25)" aria-label="Número do diploma" />
-      <button id="btn" type="button">Consultar</button>
+<header>
+  <h1>Anhanguera</h1>
+  <p>Portal de Autenticidade Acadêmica</p>
+</header>
+
+<main>
+  <div class="search">
+    <input id="q" placeholder="Digite o número do diploma (ex: 364446-86)" />
+    <button id="btn">Consultar</button>
+  </div>
+
+  <div id="feedback"></div>
+
+  <div class="card">
+    <div class="muted">Resultado da verificação</div>
+    <h2 id="name">—</h2>
+    <div id="degree">—</div>
+    <div id="inst">—</div>
+    <div id="date">—</div>
+
+    <div style="margin-top:14px;">
+      <span class="label" id="status">—</span>
     </div>
 
-    <div id="feedback" role="alert" aria-live="polite"></div>
+    <hr style="margin:18px 0;border:none;border-top:1px solid #f3f4f6" />
 
-    <div class="card" id="result">
-      <div class="muted">Resultado da verificação</div>
-      <h2 id="name">—</h2>
-      <div class="meta" id="degree">—</div>
-      <div class="meta" id="inst">—</div>
-      <div class="meta" id="date">—</div>
-      <div style="margin-top:14px;">
-        <span class="label" id="status">—</span>
-      </div>
-      <hr style="margin:18px 0;border:none;border-top:1px solid #f3f4f6" />
-      <div class="muted">Número do diploma</div>
-      <div id="dnum" style="font-weight:700;margin-top:6px">—</div>
-    </div>
-  </main>
+    <div class="muted">Número do diploma</div>
+    <div id="dnum" style="font-weight:700;margin-top:6px">—</div>
+  </div>
+</main>
 
-  <footer>© 2025 Anhanguera — Todos os direitos reservados</footer>
+<footer>© 2025 Anhanguera — Todos os direitos reservados</footer>
 
-  <script>
-    const knownDiplomas = {
-      '476457-64': {
-        name: 'Diego Roberto Alves',
-        degree: 'Pós-Graduação em Psicopedagogia',
-        inst: 'Centro Universitário Anhanguera de Belém do Pará',
-        date: 'Conclusão em 13/06/2024',
-        status: 'Ativo',
-        diploma: '476457-64'
-      },
+<script>
+  const knownDiplomas = {
 
-      '7466753-65': {
-        name: 'Gianni Carla Malaquias',
-        degree: 'Tecnólogo em Gestão de Recursos Humanos',
-        inst: 'Universidade Anhanguera',
-        date: 'Conclusão em 10/08/2025',
-        status: 'Ativo',
-        diploma: '7466753-65'
-      },
+    '476457-64': {
+      name: 'Diego Roberto Alves',
+      degree: 'Pós-Graduação em Psicopedagogia',
+      inst: 'Centro Universitário Anhanguera de Belém do Pará',
+      date: 'Conclusão em 13/06/2024',
+      status: 'Ativo',
+      diploma: '476457-64'
+    },
 
-      '746778-75': {
-        name: 'André Cordeiro Moravec',
-        degree: 'Bacharel em Administração',
-        inst: 'Centro Universitário Estácio de São Paulo',
-        date: 'Conclusão em 18/08/2025',
-        status: 'Ativo',
-        diploma: '746778-75'
-      },
+    '7466753-65': {
+      name: 'Gianni Carla Malaquias',
+      degree: 'Tecnólogo em Gestão de Recursos Humanos',
+      inst: 'Universidade Anhanguera',
+      date: 'Conclusão em 10/08/2025',
+      status: 'Ativo',
+      diploma: '7466753-65'
+    },
 
-      '57557-86': {
-        name: 'Vanderlucia Lacerda dos Santos',
-        degree: 'Pós-Graduação em Enfermagem Estética',
-        inst: 'Anhanguera Educacional Ltda',
-        date: 'Conclusão em 10/08/2024',
-        status: 'Ativo',
-        diploma: '57557-86'
-      },
+    '57557-86': {
+      name: 'Vanderlucia Lacerda dos Santos',
+      degree: 'Pós-Graduação em Enfermagem Estética',
+      inst: 'Anhanguera Educacional Ltda',
+      date: 'Conclusão em 10/08/2024',
+      status: 'Ativo',
+      diploma: '57557-86'
+    },
 
-      '47666-87': {
-        name: 'Tatiana Aparecida Raimundo',
-        degree: 'Licenciatura em Educação Especial',
-        inst: 'Universidade Anhanguera',
-        date: 'Conclusão em 10/08/2024',
-        status: 'Ativo',
-        diploma: '47666-87'
-      },
+    '47666-87': {
+      name: 'Tatiana Aparecida Raimundo',
+      degree: 'Licenciatura em Educação Especial',
+      inst: 'Universidade Anhanguera',
+      date: 'Conclusão em 10/08/2024',
+      status: 'Ativo',
+      diploma: '47666-87'
+    },
 
-      '57646-75': {
-        name: 'Joanita Aparecida Martins Machado da Veiga',
-        degree: 'Pós-Graduação em Saúde Mental e Atenção Psicossocial',
-        inst: 'Faculdade Anhanguera de Caxias do Sul-RS',
-        date: 'Conclusão em 14/09/2025',
-        status: 'Ativo',
-        diploma: '57646-75'
-      },
+    '57646-75': {
+      name: 'Joanita Aparecida Martins Machado da Veiga',
+      degree: 'Pós-Graduação em Saúde Mental e Atenção Psicossocial',
+      inst: 'Faculdade Anhanguera de Caxias do Sul-RS',
+      date: 'Conclusão em 14/09/2025',
+      status: 'Ativo',
+      diploma: '57646-75'
+    },
 
-      /* NOVO — NILZA */
-      '47555-86': {
-        name: 'Nilza Rosa de Souza do Rosario',
-        degree: 'Pós-Graduação em Educação Especial',
-        inst: 'Universidade Anhanguera',
-        date: 'Conclusão em 14/06/2025',
-        status: 'Ativo',
-        diploma: '47555-86'
-      }
-    };
+    '47555-86': {
+      name: 'Nilza Rosa de Souza do Rosario',
+      degree: 'Pós-Graduação em Educação Especial',
+      inst: 'Universidade Anhanguera',
+      date: 'Conclusão em 14/06/2025',
+      status: 'Ativo',
+      diploma: '47555-86'
+    },
 
-    const q = document.getElementById('q');
-    const btn = document.getElementById('btn');
-    const nameEl = document.getElementById('name');
-    const degreeEl = document.getElementById('degree');
-    const instEl = document.getElementById('inst');
-    const dateEl = document.getElementById('date');
-    const dnumEl = document.getElementById('dnum');
-    const statusEl = document.getElementById('status');
-    const feedbackEl = document.getElementById('feedback');
-
-    function clearDisplay() {
-      nameEl.textContent = '—';
-      degreeEl.textContent = '—';
-      instEl.textContent = '—';
-      dateEl.textContent = '—';
-      dnumEl.textContent = '—';
-      statusEl.textContent = '—';
-      feedbackEl.textContent = '';
+    /* NOVO — ELIANE */
+    '364446-86': {
+      name: 'Eliane da Silva',
+      degree: 'Pós-Graduação em Enfermagem Gerontologia',
+      inst: 'Universidade Anhanguera',
+      date: 'Conclusão em 23/08/2025',
+      status: 'Ativo',
+      diploma: '364446-86'
     }
 
-    function showNotFound(value) {
-      nameEl.textContent = 'Nenhum registro encontrado' + (value ? ' para: ' + value : '');
-      degreeEl.textContent = '';
-      instEl.textContent = '';
-      dateEl.textContent = '';
-      dnumEl.textContent = '—';
-      statusEl.textContent = 'Não encontrado';
-      statusEl.style.background = '#ffe5e5';
-      statusEl.style.color = '#b91c1c';
-      feedbackEl.textContent = '';
+  };
+
+  const q = document.getElementById('q');
+  const btn = document.getElementById('btn');
+
+  btn.onclick = () => {
+    const v = q.value.trim();
+
+    if (!v) {
+      document.getElementById('feedback').textContent = 'Informe o número do diploma.';
+      return;
     }
 
-    function showKnown(data) {
-      nameEl.textContent = data.name;
-      degreeEl.textContent = data.degree;
-      instEl.textContent = data.inst;
-      dateEl.textContent = data.date;
-      dnumEl.textContent = data.diploma;
-      statusEl.textContent = data.status;
-      statusEl.style.background = '#fff2e0';
-      statusEl.style.color = '#cc5200';
-      feedbackEl.textContent = '';
+    const d = knownDiplomas[v];
+
+    if (d) {
+      name.textContent = d.name;
+      degree.textContent = d.degree;
+      inst.textContent = d.inst;
+      date.textContent = d.date;
+      status.textContent = d.status;
+      dnum.textContent = d.diploma;
+    } else {
+      name.textContent = 'Nenhum registro encontrado';
+      degree.textContent = '';
+      inst.textContent = '';
+      date.textContent = '';
+      status.textContent = 'Não encontrado';
+      dnum.textContent = '—';
     }
+  };
+</script>
 
-    function validateDiplomaNumber(value) {
-      const regex = /^\d{5,7}-\d{2}$/;
-      return regex.test(value);
-    }
-
-    btn.addEventListener('click', () => {
-      const v = (q.value || '').trim();
-      clearDisplay();
-
-      if (!v) {
-        feedbackEl.textContent = 'Informe o número do diploma para consulta.';
-        q.focus();
-        return;
-      }
-
-      if (!validateDiplomaNumber(v)) {
-        feedbackEl.textContent = 'Número do diploma inválido. Use o formato: 00000-00 ou 0000000-00';
-        q.focus();
-        return;
-      }
-
-      btn.disabled = true;
-      btn.classList.add('loading');
-      feedbackEl.textContent = '';
-
-      setTimeout(() => {
-        btn.classList.remove('loading');
-        btn.disabled = false;
-        if (knownDiplomas[v]) {
-          showKnown(knownDiplomas[v]);
-        } else {
-          showNotFound(v);
-        }
-      }, 100);
-    });
-  </script>
 </body>
 </html>
