--- a/index.html
+++ b/index.html
@@ -194,7 +194,6 @@
       status: 'Ativo',
       diploma: '47666-87'
     },
-    /* NOVO REGISTRO */
     '576567-77': {
       name: 'Fátima Cordovil Figueiredo',
       degree: 'Pós-Graduação em Análise do Comportamento Aplicada',
@@ -202,6 +201,14 @@
       date: 'Conclusão em 15/08/2023',
       status: 'Ativo',
       diploma: '576567-77'
+    },
+    '464467-86': {
+      name: 'Suelen Anunciação da Mota Santos',
+      degree: 'Pós-Graduação em Urgência e Emergência',
+      inst: 'Universidade Anhanguera',
+      date: 'Conclusão em 23/06/2022',
+      status: 'Ativo',
+      diploma: '464467-86'
     }
   };
 
@@ -223,6 +230,8 @@
     dateEl.textContent = '—';
     dnumEl.textContent = '—';
     statusEl.textContent = '—';
+    statusEl.style.background = '#fff2e0';
+    statusEl.style.color = '#e65c00';
     feedbackEl.textContent = '';
   }
 
