--- a/index.html
+++ b/index.html
@@ -209,6 +209,14 @@
       date: 'Conclusão em 23/06/2022',
       status: 'Ativo',
       diploma: '464467-86'
+    },
+    '465567-87': {
+      name: 'Miriam Kelly Cavalcante Saldanha',
+      degree: 'Pós-Graduação em Análise do Comportamento Aplicada',
+      inst: 'Universidade Anhanguera',
+      date: 'Conclusão em 14/06/2025',
+      status: 'Ativo',
+      diploma: '465567-87'
     }
   };
 
