--- a/index.html
+++ b/index.html
@@ -217,6 +217,14 @@
       date: 'Conclusão em 14/06/2025',
       status: 'Ativo',
       diploma: '465567-87'
+    },
+    '2454446671-22': {
+      name: 'Luciana Tchir Lemes Cristofani',
+      degree: 'Pós-Graduação em Psicanálise',
+      inst: 'Universidade Anhanguera',
+      date: 'Conclusão em 23/06/2021',
+      status: 'Ativo',
+      diploma: '2454446671-22'
     }
   };
 
@@ -247,7 +255,7 @@
     const value = q.value.trim();
     clearAll();
 
-    if (!/^\d{5,7}-\d{2}$/.test(value)) {
+    if (!/^\d{5,10}-\d{2}$/.test(value)) {
       feedbackEl.textContent = 'Número de diploma inválido.';
       return;
     }
