Add new records to index.html

--- a/index.html
+++ b/index.html
@@ -225,6 +225,26 @@
       date: 'Conclusão em 23/06/2021',
       status: 'Ativo',
       diploma: '2454446671-22'
+    },
+
+    /* ===== NOVOS REGISTROS ===== */
+
+    '1350634-22': {
+      name: 'Adriano Almeida Laranjeira',
+      degree: 'Licenciatura em Pedagogia',
+      inst: 'Universidade Anhanguera',
+      date: 'Conclusão em 13/08/2024',
+      status: 'Ativo',
+      diploma: '1350634-22'
+    },
+
+    '865895-23': {
+      name: 'Valmisson Silva Santos',
+      degree: 'Licenciatura em Educação Física',
+      inst: 'Universidade Anhanguera',
+      date: 'Conclusão em 25/08/2024',
+      status: 'Ativo',
+      diploma: '865895-23'
     }
   };
 
